<resources>
    <string name="app_name">CrossoverConvos</string>

    <string name="not_already_part_of_the_convo_click_here_to_register">Not already part of the convo? Click here to register!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="nba_teams">
        <item> ATLANTA HAWKS </item>
        <item>BOSTON CELTICS</item>
        <item>BROOKLYN NETS</item>
        <item>CHARLOTTE HORNETS</item>
        <item>CHICAGO BULLS</item>
        <item>CLEVELAND CAVALIERS</item>
        <item>DALLAS MAVERICKS</item>
        <item> DENVER NUGGETS</item>
        <item>DETROIT PISTONS</item>
        <item>GOLDEN STATE WARRIORS</item>
        <item>HOUSTON ROCKETS</item>
        <item>INDIANA PACERS</item>
        <item>LOS ANGELES CLIPPERS</item>
        <item>LOS ANGELES LAKERS</item>
        <item>MEMPHIS GRIZZLIES</item>
        <item>MIAMI HEAT</item>
        <item>MILWAUKEE BUCKS</item>
        <item>MINNESOTA TIMBERWOLVES</item>
        <item>NEW ORLEANS PELICANS</item>
        <item>NEW YORK KNICKS</item>
        <item>OKLAHOMA CITY THUNDER</item>
        <item>ORLANDO MAGIC</item>
        <item>PHILADELPHIA 76ERS</item>
        <item>PHOENIX SUNS</item>
        <item>PORTLAND TRAIL BLAZERS</item>
        <item>SACRAMENTO KINGS</item>
        <item>SAN ANTONIO SPURS</item>
        <item>TORONTO RAPTORS</item>
        <item>UTAH JAZZ</item>
        <item>WASHINGTON WIZARDS</item>
    </string-array>
    <string-array name="security_questions">
        <item>What city were you born in?</item>
        <item> What is your oldest sibling’s middle name?</item>
        <item> What is your maternal grandmother\'s maiden name?</item>
        <item>What was the first concert you attended?</item>
        <item> What was the make and model of your first car?</item>
        <item>In what city or town did your parents meet?</item>
    </string-array>
    <string name="not_a_member_register_here">Not a member? Register here</string>
    <string name="login">Login</string>
    <string name="title_activity_user_feed">UserFeedActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="security_question">Security Question</string>
    <string name="date_of_birth_e_g_mm_dd_yyyy">Date of Birth (e.g., MM/dd/yyyy)</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="main_feed_title">Latest Posts</string>
    <string name="team_discussions_title">Team Discussions</string>
    <string name="create_post_title">Create a New Post</string>
    <string name="rivalry_challenges_title">Rivalry Challenges</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="security_question_label">Security Question</string>
    <string name="security_answer_hint">Security Question Answer</string>
    <string name="favorite_team_label">Please Choose Your Favorite Team</string>
    <string name="PasswordNotification">Password must be at least 6 letters with a capital letter, a number, and a symbol</string>
    <string name="phone_number">Phone Number (optional)</string>
    <string name="email_consent">I agree to receive emails from CrossoverConvos</string>
    <string name="text_consent">I agree to receive text messages from CrossoverConvos</string>
    <string name="resend_verification">Resend Verification Email</string>
    <string name="title_activity_resend_verification">ResendVerificationActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_email_sent_successfully">EmailSentSuccessfullyActivity</string>
    <string name="sendback_email">Enter your email</string>
    <string name="sendback_submit">Submit</string>
    <string name="resend_email">Signed up but haven\'t received a confirmation email? Click here to resend!</string>
    <string name="convo_contribution">Convo Contribution</string>
    <string name="post">Post</string>
    <string name="main_convo_space">Main Convo Space</string>
    <string name="edit_button">Edit this post</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="new_reg_msg">If you ain\'t in, you can\'t win! Click here to sign up!</string>
    <string name="new_login_msg">Let\'s Converse!</string>
    <string name="welcome_to_crossover_convos">Welcome to Crossover Convos!</string>
    <string name="start_trashtalk_here">start trashtalk here...</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_username">Username</string>
    <string name="admin_password">Password</string>
    <string name="title_activity_admin_landing_page">AdminLandingPageActivity</string>
    <string name="administrator_functions">Administrator Functions</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="start_trash_talk_here">Start trash talk here...</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="post_comment">Post</string>
    <string name="comments">Comments</string>


</resources>