<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:autofillHints="nameGiven" />


    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:autofillHints="nameFamily" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
    <CheckBox
        android:id="@+id/checkBoxEmailConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_consent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PasswordNotification"
        android:padding="8dp"/>


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password" />


    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:autofillHints="newPassword" />


    <Button
        android:id="@+id/toggle_password_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"/>


    <EditText
        android:id="@+id/editTextDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth_e_g_mm_dd_yyyy"
        android:inputType="date"
        android:autofillHints="dateOfBirth" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_question_label"
        android:padding="8dp" />


    <Spinner
        android:id="@+id/security_question_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/editTextSecurityAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/security_answer_hint"
        android:inputType="text"
        android:autofillHints="Security Answer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_team_label"
        android:padding="8dp" />


    <Spinner
        android:id="@+id/nbaTeamsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>